# puzzled

./: Cargo.toml  docker-compose.yml
db/: knexfile.js  package-lock.json  package.json
db/lib/: migrations.js
db/migrations/: 20231224121152_add_games.mjs  20231224135536_clean_games.mjs  20231224135659_add_moves.mjs  20240109163052_add_eval.mjs  20240109170443_add_fen.mjs  20240109171101_make_fen_non_nullable.mjs
gamegen/: Cargo.toml
gamegen/src/: db.rs  main.rs  pgn.rs
