[package]
name = "gamegen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
shakmaty = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "time", "json" ] }
dotenvy = "0.15.7"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
